:hammer: event list and Events section added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../sections/home/Hero.astro";
+import Events from "../sections/home/Events.astro";
+import Services from "../sections/home/Services.astro";
 ---
 
-<Layout>
+<Layout title="">
   <Hero />
+  <Events />
+  <Services />
 </Layout>
