:lipstick: tailwind classes updated in Heading

--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -5,10 +5,12 @@
 <section class="section-full hero">
   <h1
     class:list={[
+      "absolute bottom-40",
       "font-serif",
-      "max-w-72 lg:max-w-lg",
-      "pt-44 md:pt-56 lg:mt-64 pb-16 px-5",
-      "text-lavender-blush text-5xl lg:text-8xl text-center text-pretty",
+      "max-w-96 lg:max-w-lg",
+      "px-4",
+      // "text-vista-white text-6xl lg:text-8xl text-center text-pretty",
+      "text-vista-white text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty",
     ]}
   >
     Authentic homemade flavor
@@ -21,5 +23,6 @@
       url("../../assets/unnamed35copy.jpeg") no-repeat center / cover;
     display: flex;
     justify-content: center;
+    height: 80vh;
   }
 </style>
