navbar component in progress

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../assets/logo.svg";
+import logo from "../assets/logo-green.svg";
 
 const links = [
   { name: "About", href: "/about" },
@@ -12,45 +12,40 @@ const links = [
 ];
 ---
 
-<nav class:list={["section-full"]}>
+<nav
+  id="menu"
+  class:list={[
+    "bg-vista-white",
+    "bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-25",
+    "fixed top-0",
+    "lg:flex",
+    "py-3",
+    "w-full",
+    "z-10",
+  ]}
+>
   <main
     class:list={[
-      "border border-french-rose",
       "section",
-      "flex flex-row justify-between lg:items-center",
-      "gap-x-20",
-      "text-base lg:text-20px",
+      "flex flex-row justify-between lg:items-stretch",
+      "gap-x-14",
     ]}
   >
-    <a href="/" class="col-span-1 flex items-center">
-      <Image src={logo} alt="Simplifica logo" class="w-full" />
+    <a href="/" class="flex items-center">
+      <Image src={logo} alt="La chinacata logo" class="w-56 lg:w-full" />
     </a>
 
-    <div class:list={["flex lg:hidden cursor-pointer place-items-center"]}>
-      <!-- <Image
-        id="openmenu"
-        src={bars}
-        alt="abrir menú"
-        class="w-6 h-6 text-mine-shaft"
-      />
-      <Image
-        id="closemenu"
-        src={close}
-        alt="cerrar menú"
-        class="w-6 h-6 text-mine-shaft hidden"
-      /> -->
+    <div class:list={["cursor-pointer flex lg:hidden place-items-center"]}>
+      <Image id="openmenu" src={logo} alt="abrir menú" class="w-6 h-6" />
     </div>
 
     <section
-      id="menu"
       class:list={[
-        "bg-gradient-to-b from-neutral-50 to-neutral-50/95",
-        "border border-carnation",
         "absolute lg:relative",
         "top-[78px] lg:top-0 left-0",
         "hidden lg:flex",
+        // "items-center",
         "justify-around",
-        "items-center",
         "py-4 px-12 lg:p-0",
         "transition duration-75 ease",
         "w-full",
@@ -60,7 +55,8 @@ const links = [
         class:list={[
           "flex",
           "flex-col lg:flex-row",
-          "justify-between",
+          "items-end justify-between",
+          "h-[54px]",
           "w-full",
         ]}
       >
@@ -69,12 +65,11 @@ const links = [
             <a
               href={href}
               class:list={[
-                "border-b border-zircon lg:border-0",
-                "py-8 lg:py-0",
-                "text-20px text-mine-shaft",
-                "hover:text-aqua-brand",
-                "hover:transition-all hover:duration-150",
-                "focus:text-aqua-brand",
+                // "py-8 lg:py-0",
+                "font-medium tracking-wide text-lg text-green-leaf-800",
+                "hover:text-carnation-500",
+                "hover:transition-all hover:duration-150 hover:ease-in-out",
+                "focus:text-carnation-500",
               ]}
             >
               {name}
@@ -84,16 +79,124 @@ const links = [
         <a
           href="/"
           class:list={[
-            "lg:hidden",
-            "py-9",
-            "inline-flex justify-center items-center gap-x-5",
-            "text-base text-mine-shaft",
+            // "lg:hidden",
+            // "gap-x-5",
+            "absolute bottom-1 right-0",
+            "bg-carnation-400",
+            "inline-flex justify-center items-end",
+            "py-0.5 px-4",
+            "rounded-3xl",
+            "font-medium tracking-wide text-lg text-vista-white",
+            "hover:bg-carnation-300 hover:text-carnation-800",
+            "hover:transition-all hover:duration-150 hover:ease-in-out",
           ]}
         >
-          <!-- <Image src={icon} alt="menú" class="" /> -->
-          Go to homepage
+          Get in touch
         </a>
       </div>
     </section>
   </main>
 </nav>
+
+<nav
+  id="mobile-menu"
+  class:list={[
+    "hidden lg:hidden",
+    "fixed top-0",
+    "bg-lavender-blush bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-25",
+    "h-dvh",
+    "py-3",
+    "w-full",
+    "z-20",
+  ]}
+>
+  <main
+    class:list={[
+      "section",
+      "flex flex-row justify-between",
+      "font-serif text-5xl leading-4",
+    ]}
+  >
+    <a href="/" class="flex items-center">
+      <Image src={logo} alt="La chinacata logo" class="w-56" />
+    </a>
+
+    <div class:list={["cursor-pointer flex place-items-center"]}>
+      <Image id="closemenu" src={logo} alt="cerrar menú" class="w-6 h-6" />
+    </div>
+
+    <section
+      class:list={[
+        "absolute",
+        "top-[92px] left-0",
+        "py-8 px-12",
+        "transition duration-75 ease",
+        "w-full",
+      ]}
+    >
+      <div class:list={["flex", "flex-col", "text-center", "w-full"]}>
+        {
+          links.map(({ name, href }) => (
+            <a
+              href={href}
+              class:list={[
+                "py-7",
+                "font-semibold text-green-leaf-950",
+                "hover:text-carnation-300",
+                "hover:transition-all hover:duration-150 hover:ease-in-out",
+                "focus:text-carnation-500",
+              ]}
+            >
+              {name}
+            </a>
+          ))
+        }
+        <a
+          href="/"
+          class:list={[
+            "bg-carnation-400",
+            "font-sans font-medium tracking-wide text-lg text-vista-white",
+            "inline-flex justify-center items-center",
+            "mt-12",
+            "py-2.5 px-4",
+            "place-self-center",
+            "rounded-3xl",
+            "w-[280px]",
+            "hover:bg-carnation-300 hover:text-carnation-800",
+            "hover:transition-all hover:duration-150 hover:ease-in-out",
+          ]}
+        >
+          Get in touch
+        </a>
+      </div>
+    </section>
+  </main>
+</nav>
+
+<script>
+  const menu = document.getElementById("menu");
+  const mobilemenu = document.getElementById("mobile-menu");
+  const openmenu = document.getElementById("openmenu");
+  const closemenu = document.getElementById("closemenu");
+
+  function openMenu() {
+    openmenu?.addEventListener("click", () => {
+      if (menu !== null && mobilemenu !== null) {
+        menu.classList.toggle("hidden");
+        mobilemenu.classList.toggle("hidden");
+      }
+    });
+  }
+
+  function closeMenu() {
+    closemenu?.addEventListener("click", () => {
+      if (menu !== null && mobilemenu !== null) {
+        mobilemenu.classList.add("hidden");
+        menu.classList.remove("hidden");
+      }
+    });
+  }
+
+  openMenu();
+  closeMenu();
+</script>
