--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,10 +17,10 @@ import logo from "../assets/logo-footer.svg";
 
   <div
     class:list={[
-      "border-t border-t-green-leaf",
+      "border-t border-t-green-leaf-700",
       "flex flex-col md:flex-row",
       "items-center justify-center md:justify-between",
-      "font-light text-sm text-green-leaf",
+      "font-light text-sm text-green-leaf-900",
       "mx-auto",
       "max-w-screen-xl",
       "w-4/5",
