--- a/src/components/Event.astro
+++ b/src/components/Event.astro
@@ -14,33 +14,43 @@ interface Props {
 const { class: className, name, detail, moreDetails, image, alt } = Astro.props;
 ---
 
-<Image
-  src={image}
-  alt={alt}
-  class:list={[
-    "border-green-leaf border-y-2 border-l-2 border-r-4",
-    "object-cover rounded-full",
-    "max-w-[80%] place-self-center",
-    className,
-  ]}
-/>
+<article class:list={["flex flex-col items-center", className]}>
+  <Image
+    src={image}
+    alt={alt}
+    class:list={[
+      "border-green-leaf-900 border-y-2 border-l-2 border-r-4",
+      "object-cover rounded-full",
+      "max-w-[80%] place-self-center",
+    ]}
+  />
 
-<span class:list={[]}>
-  {name}
-</span>
-<p
-  class:list={[
-    "bg-shark",
-    "font-sans font-light text-green-leaf text-lg text-center text-pretty",
-  ]}
->
-  {detail}
-</p>
-<p
-  class:list={[
-    "bg-shark",
-    "font-sans font-light text-green-leaf text-lg text-center text-pretty",
-  ]}
->
-  {moreDetails}
-</p>
+  <span
+    class:list={[
+      "cursor-pointer",
+      "pt-8",
+      "font-serif font-semibold text-3xl text-center text-shark-300",
+      "hover:text-carnation-400",
+    ]}
+  >
+    {name}
+  </span>
+  <p
+    class:list={[
+      "border border-purple-500",
+      "pt-6",
+      "font-sans font-light text-green-leaf-950 text-lg text-center text-pretty",
+    ]}
+  >
+    {detail}
+  </p>
+  <p
+    class:list={[
+      "border border-sky-500",
+      "pt-4",
+      "font-sans font-light text-green-leaf-950 text-lg text-center text-pretty",
+    ]}
+  >
+    {moreDetails}
+  </p>
+</article>
