social media section added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../sections/home/Hero.astro";
 import Events from "../sections/home/Events.astro";
 import Services from "../sections/home/Services.astro";
+import SocialMedia from "../sections/SocialMedia.astro";
 ---
 
 <Layout title="">
   <Hero />
   <Events />
   <Services />
+  <SocialMedia />
 </Layout>
