--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../assets/logo-green.svg";
+import logo from "../assets/logo/logo-green.svg";
 
 const links = [
   { name: "About", href: "/about" },
