--- a/src/sections/SocialMedia.astro
+++ b/src/sections/SocialMedia.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import insta from "../assets/instagram.svg";
-import fb from "../assets/facebook.svg";
-import tt from "../assets/tiktok.svg";
+import insta from "../assets/social-media/instagram.svg";
+import fb from "../assets/social-media/facebook.svg";
+import tt from "../assets/social-media/tiktok.svg";
 ---
 
 <section class:list={["section-full", "bg-french-rose-400", "py-40"]}>
