--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../assets/logo-footer.svg";
+import logo from "../assets/logo/logo-footer.svg";
 ---
 
 <footer class:list={["section-full", "py-20"]}>
