--- a/src/sections/home/Events.astro
+++ b/src/sections/home/Events.astro
@@ -1,6 +1,6 @@
 ---
 import Event from "../../components/Event.astro";
-import eventImage from "../../assets/unnamed49copy.jpeg";
+import eventImage from "../../assets/social-event.jpeg";
 
 const events = [
   {
