--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -9,8 +9,7 @@
       "font-serif",
       "max-w-96 lg:max-w-lg",
       "px-4",
-      // "text-vista-white text-6xl lg:text-8xl text-center text-pretty",
-      "text-vista-white text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty",
+      "text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty text-vista-white",
     ]}
   >
     Authentic homemade flavor
@@ -20,7 +19,7 @@
   .hero {
     background:
       linear-gradient(#e556090d 30%, #2626268c 60%),
-      url("../../assets/unnamed35copy.jpeg") no-repeat center / cover;
+      url("../../assets/appetizers-copy.jpeg") no-repeat center / cover;
     display: flex;
     justify-content: center;
     height: 80vh;
