--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -44,7 +44,6 @@ const links = [
         "absolute lg:relative",
         "top-[78px] lg:top-0 left-0",
         "hidden lg:flex",
-        // "items-center",
         "justify-around",
         "py-4 px-12 lg:p-0",
         "transition duration-75 ease",
@@ -65,11 +64,10 @@ const links = [
             <a
               href={href}
               class:list={[
-                // "py-8 lg:py-0",
                 "font-medium tracking-wide text-lg text-green-leaf-800",
-                "hover:text-carnation-500",
+                "hover:text-french-rose-500",
                 "hover:transition-all hover:duration-150 hover:ease-in-out",
-                "focus:text-carnation-500",
+                "focus:text-french-rose-500",
               ]}
             >
               {name}
@@ -79,15 +77,13 @@ const links = [
         <a
           href="/"
           class:list={[
-            // "lg:hidden",
-            // "gap-x-5",
             "absolute bottom-1 right-0",
-            "bg-carnation-400",
+            "bg-french-rose-400",
             "inline-flex justify-center items-end",
             "py-0.5 px-4",
             "rounded-3xl",
             "font-medium tracking-wide text-lg text-vista-white",
-            "hover:bg-carnation-300 hover:text-carnation-800",
+            "hover:bg-french-rose-300 hover:text-french-rose-900",
             "hover:transition-all hover:duration-150 hover:ease-in-out",
           ]}
         >
@@ -142,9 +138,9 @@ const links = [
               class:list={[
                 "py-7",
                 "font-semibold text-green-leaf-950",
-                "hover:text-carnation-300",
+                "hover:text-french-rose-500",
                 "hover:transition-all hover:duration-150 hover:ease-in-out",
-                "focus:text-carnation-500",
+                "focus:text-french-rose-500",
               ]}
             >
               {name}
@@ -154,7 +150,7 @@ const links = [
         <a
           href="/"
           class:list={[
-            "bg-carnation-400",
+            "bg-french-rose-400",
             "font-sans font-medium tracking-wide text-lg text-vista-white",
             "inline-flex justify-center items-center",
             "mt-12",
@@ -162,7 +158,7 @@ const links = [
             "place-self-center",
             "rounded-3xl",
             "w-[280px]",
-            "hover:bg-carnation-300 hover:text-carnation-800",
+            "hover:bg-french-rose-300 hover:text-french-rose-900",
             "hover:transition-all hover:duration-150 hover:ease-in-out",
           ]}
         >
