gallery flavors that inspire

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Hero from "../sections/home/Hero.astro";
 import Events from "../sections/home/Events.astro";
 import Services from "../sections/home/Services.astro";
 import SocialMedia from "../sections/SocialMedia.astro";
+import Flavors from "../sections/home/Flavors.astro";
 ---
 
 <Layout title="">
   <Hero />
   <Events />
   <Services />
+  <Flavors />
   <SocialMedia />
 </Layout>
