--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ import logo from "../assets/logo/logo-footer.svg";
       "w-4/5",
     ]}
   >
-    <p class="pt-7">La Chinacata© 2024 All rights reserved</p>
+    <p class="pt-7 text-center">La Chinacata© 2024 All rights reserved</p>
     <a class="cursor-pointer pt-2 md:pt-7" href="#">Privacy policy</a>
   </div>
 </footer>
