--- a/src/sections/SocialMedia.astro
+++ b/src/sections/SocialMedia.astro
@@ -5,7 +5,10 @@ import fb from "../assets/social-media/facebook.svg";
 import tt from "../assets/social-media/tiktok.svg";
 ---
 
-<section class:list={["section-full", "bg-french-rose-400", "py-40"]}>
+<section
+  id="follow-us"
+  class:list={["section-full", "bg-french-rose-400", "py-40"]}
+>
   <div
     class:list={[
       "flex flex-col",
