--- a/src/sections/home/Events.astro
+++ b/src/sections/home/Events.astro
@@ -33,7 +33,7 @@ const events = [
 ];
 ---
 
-<section class:list={["section-full", "bg-shark-50", "py-16"]}>
+<section id="events" class:list={["section-full", "bg-shark-50", "py-16"]}>
   <div
     class:list={[
       "border border-dashed border-lime-400",
