--- a/src/sections/home/Flavors.astro
+++ b/src/sections/home/Flavors.astro
@@ -38,7 +38,9 @@ const images = [
         "font-light text-green-leaf-800",
       ]}
     >
-      <h2 class="font-serif text-5xl md:text-7xl text-french-rose-400">
+      <h2
+        class="font-serif font-medium text-heading-sm md:text-heading-lg text-french-rose-400"
+      >
         Flavors that inspire
       </h2>
 
