clients section added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,17 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../sections/home/Hero.astro";
 import Events from "../sections/home/Events.astro";
-import Services from "../sections/home/Services.astro";
-import SocialMedia from "../sections/SocialMedia.astro";
+import Celebrations from "../sections/home/Celebrations.astro";
 import Flavors from "../sections/home/Flavors.astro";
+import Clients from "../sections/home/Clients.astro";
+import SocialMedia from "../sections/SocialMedia.astro";
 ---
 
 <Layout title="">
   <Hero />
   <Events />
-  <Services />
+  <Celebrations />
   <Flavors />
+  <Clients />
   <SocialMedia />
 </Layout>
