assets arrangement changed

--- a/src/sections/home/Clients.astro
+++ b/src/sections/home/Clients.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import cheers from "../../assets/clients/cheers.png";
+import cheers from "../../assets/home/clients/cheers.png";
 
 const reviews = [
   {
