--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,7 +33,7 @@ const links = [
       "gap-x-16",
     ]}
   >
-    <a href="/" class="flex items-center">
+    <a href="/" class="flex items-center pb-5 lg:pb-0">
       <Image
         src={logo}
         alt="La chinacata logo"
@@ -81,7 +81,7 @@ const links = [
           ))
         }
         <a
-          href="/"
+          href="/get-in-touch"
           class:list={[
             "bg-french-rose-400",
             "inline-flex justify-center items-end",
@@ -153,7 +153,7 @@ const links = [
           ))
         }
         <a
-          href="/"
+          href="/get-in-touch"
           class:list={[
             "bg-french-rose-400",
             "font-sans font-medium tracking-wide text-lg text-vista-white",
