--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../sections/about/Hero.astro";
+import Hero from "../sections/home/Hero.astro";
+import Intro from "../sections/about/Intro.astro";
 ---
 
-<Layout title="">
+<Layout title="About us">
   <Hero />
+  <Intro />
 </Layout>
